hphp/hack/test/typecheck/reified_generics/valid_targ_wildcard_is_as.php.exp
File "valid_targ_wildcard_is_as.php", line 8, characters 8-14:
Invalid `as` expression hint (Typing[4195])
  File "valid_targ_wildcard_is_as.php", line 8, characters 10-13:
  The `as` operator cannot be used with a reified type containing a wildcard (`_`)
