hphp/hack/test/typecheck/reified_generics/valid_targ_wildcard_is_as.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

class C<reify Tc> {}

function test(): void {
  3 as C<_>;
  3 as C<C<_>>;
}
